--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+
+<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+        <div class="container text-center">
+          <small>Copyright &copy; 2019 CrowDo</small>
+        </div>
+      </footer>
+
+
