--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="banner">
+        <div class="container">
+        <div class="banner-text">
+        <div class="banner-heading">
+        Creating the Future
+        </div>
+        <div class="banner-sub-heading">
+        Adopters and innovation seekers find lively, imaginative tech before it hits the mainstream.
+        </div>
+        <button type="button" class="btn btn-warning text-dark btn-banner">Get started</button>
+        </div>
+        </div>
+    </div>
