log in and register connection

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,4 @@
+<div class bg-secondary text-white>
 <div class="banner">
         <div class="container">
         <div class="banner-text">
@@ -6,8 +7,7 @@
         </div>
         <div class="banner-sub-heading">
         Adopters and innovation seekers find lively, imaginative tech before it hits the mainstream.
-        </div>
-        <button type="button" class="btn btn-warning text-dark btn-banner">Get started</button>
-        </div>
+
         </div>
     </div>
+</div>
