--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,33 +1,23 @@
 <!--Navbar -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<style type="text/css">
-    .bs-example{
-        
-        background-color: lightblue;
-    }
-    
-</style>
 <div class="bs-example">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a href="#" class="navbar-brand">CrowDo</a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav">
-                    <a href="#" class="nav-item nav-link active">Home</a>
-                    <a href="#" class="nav-item nav-link">About</a>
-                    <a href="#" class="nav-item nav-link">Products</a>
-                </div>
-                <form class="form-inline ml-auto">
-                    <input type="text" class="form-control mr-sm-2" placeholder="Search">
-                    <button type="submit" class="btn btn-outline-light">Search</button>
-                </form>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a [routerLink]="['']" class="navbar-brand">CrowDo</a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+                <a [routerLink]="['/']" class="nav-item nav-link active">Home</a>
+                <a [routerLink]="['/fundings']" class="nav-item nav-link " >Fundings</a>
+                <a [routerLink]="['/login']" class="nav-item nav-link active" *ngIf="!(isLoggedIn$ | async)">Login</a>
+                <a [routerLink]="['/register']" class="nav-item nav-link active" *ngIf="!(isLoggedIn$ | async)">Register</a>
+                <a href="javascript:void(0)" (click)="logout()" class="nav-item nav-link active" *ngIf="(isLoggedIn$ | async)">Logout</a>
             </div>
-        </nav>
-    </div>
+            <form class="form-inline ml-auto">
+                <input type="text" class="form-control mr-sm-2" placeholder="Search">
+                <button type="submit" class="btn btn-outline-light">Search</button>
+            </form>
+        </div>
+    </nav>
+</div>
