--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,30 +1,37 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<!------ Include the above in your HEAD tag
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+    ---------->
 
 <!--
     you can substitue the span of reauth email for a input with the email and
     include the remember me checkbox
     -->
+    <div class="p-3 mb-2 bg-secondary text-dark" >
     <div class="container">
         <div class="card card-container">
             <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
-            <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
-            <p id="profile-name" class="profile-name-card"></p>
-            <form class="form-signin">
+            <img id="profile-img" class="profile-img-card" src="https://cdn.pixabay.com/photo/2016/05/26/14/39/parrot-1417286_1280.png" />
+            <p id="profile-name" class="profile-name-card">Login</p>
+            <form [formGroup]="myForm" (submit)="formSubmit()">
+            <div class="form-signin">
                 <span id="reauth-email" class="reauth-email"></span>
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                <input type="text" id="userName" formControlName="userName" class="form-control" placeholder="Username" autofocus>
+                <input type="password" id="Password" formControlName="password" class="form-control" placeholder="Password">
                 <div id="remember" class="checkbox">
                     <label>
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+            </div>
             </form><!-- /form -->
             <a href="#" class="forgot-password">
                 Forgot the password?
             </a>
+         
         </div><!-- /card-container -->
     </div><!-- /container -->
+
+</div>
