--- a/src/app/created-projects/created-projects.component.html
+++ b/src/app/created-projects/created-projects.component.html
@@ -1,1 +1,18 @@
-<p>created-projects works!</p>
+<table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Project Name</th>
+        <th scope="col">Delete</th>
+        <th scope="col">Update</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let proj of projects">
+        <th scope="row" >{{proj.title}}</th>
+        <td></td>
+
+      </tr>
+     
+    </tbody>
+  </table>
